[gd_scene load_steps=10 format=2]

[ext_resource path="res://cano.gd" type="Script" id=1]
[ext_resource path="res://respostas.gd" type="Script" id=2]
[ext_resource path="res://assets/canos/cano_L.png" type="Texture" id=3]
[ext_resource path="res://assets/canos/cano_inicial.png" type="Texture" id=4]
[ext_resource path="res://assets/canos/cano_reto.png" type="Texture" id=5]
[ext_resource path="res://levels/botao_next.gd" type="Script" id=6]
[ext_resource path="res://assets/interface/botão restart/fundo.png" type="Texture" id=7]
[ext_resource path="res://assets/interface/setinha/direita.png" type="Texture" id=8]
[ext_resource path="res://assets/interface/corações/cheio.png" type="Texture" id=9]

[node name="Level1" type="Node2D"]
script = ExtResource( 2 )

[node name="CanoInicial" type="Sprite" parent="."]
position = Vector2( 355, 80 )
scale = Vector2( 5, 6 )
texture = ExtResource( 4 )
offset = Vector2( 7.62939e-06, 0 )

[node name="CanoFinal" type="Sprite" parent="."]
position = Vector2( 937, 483 )
rotation = -4.71239
scale = Vector2( 5, 6 )
texture = ExtResource( 4 )

[node name="CanoReto" type="Sprite" parent="."]
position = Vector2( 359, 267 )
rotation = -3.14159
scale = Vector2( 5, 6 )
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="CanoL" type="Sprite" parent="."]
position = Vector2( 382, 453 )
scale = Vector2( 5, 6 )
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="CanoReto2" type="Sprite" parent="."]
position = Vector2( 557, 488 )
rotation = 4.71239
scale = Vector2( 5, 6 )
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="CanoReto4" type="Sprite" parent="."]
position = Vector2( 749, 488 )
rotation = 1.5708
scale = Vector2( 5, 6 )
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="NextLevel" type="Area2D" parent="."]
visible = false

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 935, 61 )
scale = Vector2( 0.29863, 0.3 )
texture = ExtResource( 7 )
script = ExtResource( 6 )

[node name="Direita" type="Sprite" parent="Fundo"]
position = Vector2( 13.3947, 0 )
scale = Vector2( 0.660136, 0.707547 )
texture = ExtResource( 8 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Life" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Hearts" type="TextureRect" parent="UI/Life"]
margin_left = 13.0
margin_top = 25.0
margin_right = 294.0
margin_bottom = 279.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
